--- a/ADRIANA ABREU/quiz.html
+++ b/ADRIANA ABREU/quiz.html
@@ -13,6 +13,9 @@
     <a href="Index.html">Voltar para a Página 1</a>
     <a href="pagina2.html">Ir para a Página 2</a>
     <a href="teste do site da escola feito pela ia.html"> ir para pagina teste</a>
+    <a href="dashboard.html">Ir para o Dashboard</a>
+    <a href="quiz.html">Ir para a Página do Quiz</a>
+    
 
 
     <div class="quiz-container">
